k8s/deploy/other/infra_other/mattermost_DONTUSE.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: mattermost
  name: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mattermost
  template:
    metadata:
      labels:
        run: mattermost
    spec:
      containers:
      - image: mattermost/mattermost-preview
        name: mattermost
        ports:
        - containerPort: 8065
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mattermost
  name: mattermost
spec:
  ports:
  - name: http
    port: 8065
  selector:
    run: mattermost
  type: NodePort
