k8s/deploy/other/infra_other/nginx-devpi.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: nginx-rev-proxy-devpi
  name: nginx-rev-proxy-devpi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-rev-proxy-devpi
  template:
    metadata:
      labels:
        run: nginx-rev-proxy-devpi
    spec:
      containers:
      - image: newtonsystems/docker-nginx-reverse-proxy:latest
        name: nginx-rev-proxy-devpi
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: http2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx-rev-proxy-devpi
  name: nginx-rev-proxy-devpi
spec:
  ports:
  - name: http2
    port: 443
  - name: http
    port: 80
  selector:
    run: nginx-rev-proxy-devpi
  type: NodePort
