k8s/deploy/other/infra_other/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-based-ingress
spec:
  rules:
  - host: foo.rancher.newtonsystems.co.uk
    http:
      paths:
      - path:
        backend:
          serviceName: zipkin
          servicePort: 80
